scripts/nullness/annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8.txt
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Action.java:35: error: [argument] incompatible argument for parameter c of ArrayList.addAll.
				paths.addAll(a.getPath(last));
				                      ^
  found   : @Initialized @Nullable ArrayList<@Initialized @NonNull WavePath>
  required: @Initialized @NonNull Collection<? extends @Initialized @NonNull WavePath>
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Action.java:35: error: [argument] incompatible argument for parameter prev of Action.getPath.
				paths.addAll(a.getPath(last));
				                       ^
  found   : @Initialized @Nullable WavePath
  required: @Initialized @NonNull WavePath
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/meta/WaveEnemy.java:43: error: [return] incompatible types in return.
		return Paths;
		       ^
  type of expression: @Initialized @Nullable List<@Initialized @NonNull WavePath>
  method return type: @Initialized @NonNull List<@Initialized @NonNull WavePath>
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Rectangle.java:20: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(right, down, left, up);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Rectangle.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Rectangle.java:22: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(down, left, up, right);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Rectangle.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Eight.java:13: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
		addAction(a1,a2,a3);
		         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Eight.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/CrossAndUp.java:15: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
		addAction(cross, up);
		         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.CrossAndUp.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Bounce.java:18: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
		addAction(m1,m2);
		         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Bounce.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/ZigZag.java:14: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(up,down);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.ZigZag.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/ZigZag.java:19: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(down, up);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.ZigZag.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Circle.java:26: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(qs[i % 4]);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Circle.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Hexagon.java:26: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(left, down1, down2, right, up1, up2);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Hexagon.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/actions/Hexagon.java:28: error: [method.invocation] call to addAction(in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			addAction(right, down2, down1, left, up2, up1);
			         ^
  found   : @UnderInitialization(in.mustafaak.izuna.actions.Hexagon.class) @NonNull Action
  required: @Initialized @NonNull Action
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/RowColEnter.java:17: error: [method.invocation] call to setEnemies(java.util.List<in.mustafaak.izuna.meta.WaveEnemy>) not allowed on the given receiver.
		setEnemies(new ArrayList<WaveEnemy>());
		          ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.RowColEnter.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/RowColEnter.java:35: error: [method.invocation] call to putEnemy(java.lang.String,in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
				putEnemy(ship, start,delay,move);
				        ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.RowColEnter.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/Invade.java:17: error: [method.invocation] call to setEnemies(java.util.List<in.mustafaak.izuna.meta.WaveEnemy>) not allowed on the given receiver.
		setEnemies(new ArrayList<WaveEnemy>());
		          ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.Invade.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/Invade.java:41: error: [method.invocation] call to putEnemy(java.lang.String,in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			putEnemy(ship, a, a0, a1, a2, a3);
			        ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.Invade.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/CircularInvade.java:16: error: [method.invocation] call to setEnemies(java.util.List<in.mustafaak.izuna.meta.WaveEnemy>) not allowed on the given receiver.
		setEnemies(new ArrayList<WaveEnemy>());
		          ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.CircularInvade.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
../annotator/urldae1c57e59_mustafaakin_izuna_mapeditor_tgz-pJ8-in_mustafaak_izuna_actions_ActionTestJ8/src/in/mustafaak/izuna/waves/CircularInvade.java:29: error: [method.invocation] call to putEnemy(java.lang.String,in.mustafaak.izuna.actions.Action...) not allowed on the given receiver.
			putEnemy(ship, a0, a1, a2, a3, a4);
			        ^
  found   : @UnderInitialization(in.mustafaak.izuna.waves.CircularInvade.class) @NonNull WaveInfo
  required: @Initialized @NonNull WaveInfo
19 errors
